--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "simple-calculator",
-  "version": "1.0.0",
+  "name": "project00002-simple-calculator",
+  "version": "1.1.1",
   "description": "A simple calculator with typescript,",
   "main": "index.js",
   "type": "module",
+  "bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
